--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  # Также можно запускать вручную
   workflow_dispatch:
     inputs:
       version:
@@ -19,16 +18,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    # Шаг 1: Проверка кода из репозитория
     - name: Checkout кода
       uses: actions/checkout@v4
 
-    # Шаг 2: Установка необходимых утилит
     - name: Установка утилит
       run: |
         brew install xcbeautify jq
 
-    # Шаг 3: Установка сертификата и provisioning profile из GitHub Secrets
     - name: Установка сертификата подписи
       env:
         CERTIFICATE_P12: ${{ secrets.CERTIFICATE_P12 }}
@@ -49,7 +45,6 @@ jobs:
         mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
         echo -n "$PROVISIONING_PROFILE" | base64 --decode -o ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
 
-    # Шаг 4: Определение имени проекта и схемы
     - name: Определение параметров проекта
       run: |
         PROJECT_FILE=$(find . -d 1 -name "*.xcodeproj" | head -n 1)
@@ -63,7 +58,6 @@ jobs:
         SCHEME_NAME=$(xcodebuild -project "$PROJECT_FILE" -list -json | jq -r '.project.schemes[0]')
         echo "SCHEME_NAME=$SCHEME_NAME" >> $GITHUB_ENV
 
-    # Шаг 5: Сборка и архивирование приложения
     - name: Сборка и архивирование приложения
       env:
         APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
@@ -88,27 +82,25 @@ jobs:
           exit 1
         fi
 
-    # Шаг 6: Экспорт .ipa файла
     - name: Экспорт IPA файла
       env:
         APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
       run: |
-        cat > exportOptions.plist <<EOF
-        <?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-        <dict>
-            <key>method</key>
-            <string>app-store</string>
-            <key>teamID</key>
-            <string>$APPLE_TEAM_ID</string>
-            <key>compileBitcode</key>
-            <false/>
-            <key>thinning</key>
-            <string><none></string>
-        </dict>
-        </plist>
-        EOF
+        # Создание exportOptions.plist с правильным экранированием
+        echo '<?xml version="1.0" encoding="UTF-8"?>' > exportOptions.plist
+        echo '<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">' >> exportOptions.plist
+        echo '<plist version="1.0">' >> exportOptions.plist
+        echo '<dict>' >> exportOptions.plist
+        echo '    <key>method</key>' >> exportOptions.plist
+        echo '    <string>app-store</string>' >> exportOptions.plist
+        echo '    <key>teamID</key>' >> exportOptions.plist
+        echo '    <string>'"$APPLE_TEAM_ID"'</string>' >> exportOptions.plist
+        echo '    <key>compileBitcode</key>' >> exportOptions.plist
+        echo '    <false/>' >> exportOptions.plist
+        echo '    <key>thinning</key>' >> exportOptions.plist
+        echo '    <string><none></string>' >> exportOptions.plist
+        echo '</dict>' >> exportOptions.plist
+        echo '</plist>' >> exportOptions.plist
 
         xcodebuild -exportArchive \
           -archivePath "$PROJECT_NAME.xcarchive" \
@@ -121,7 +113,6 @@ jobs:
           exit 1
         fi
 
-    # Шаг 7: Создание GitHub Release и загрузка IPA
     - name: Создание GitHub Release
       id: create_release
       uses: actions/create-release@v1
@@ -133,7 +124,6 @@ jobs:
         draft: false
         prerelease: false
 
-    # Шаг 8: Загрузка IPA файла в Release
     - name: Загрузка IPA в Release
       uses: actions/upload-release-asset@v1
       env:
@@ -142,15 +132,4 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./${{ env.PROJECT_NAME }}.ipa
         asset_name: ${{ env.PROJECT_NAME }}.ipa
-        asset_content_type: application/octet-stream
-
-    # Шаг 9: Загрузка архива в Release (опционально)
-    - name: Загрузка архива в Release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ env.PROJECT_NAME }}.xcarchive
-        asset_name: ${{ env.PROJECT_NAME }}.xcarchive
         asset_content_type: application/octet-stream
